2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* NemerleBinding.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.

2005-10-06  Lluis Sanchez Gual  <lluis@novell.com> 

	* NemerleBinding.addin.xml:
	* NemerleLanguageBinding.cs: Register serializable types in the addin
	configuration file.

2005-10-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* NemerleBinding.addin.xml: Added addin dependencies.

2005-08-12  Lluis Sanchez Gual  <lluis@novell.com> 

	* NemerleGnomeSharpProject.xpt.xml:
	* NemerleGtkSharpProject.xpt.xml:
	* NemerleEmptyProject.xpt.xml:
	* EmptyNemerleFile.xft.xml:
	* NemerleGtkSharpWindow.xft.xml:
	* NemerleBinding.addin.xml: Properly reference resource icons and
	templates.
	* Makefile.am: Embed icon and templates as resources.

2005-07-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/NemerleParameters.cs: Implement ICloneable.
	* NemerleLanguageBinding.cs: CreateCompilationParameters now returns an
	ICloneable.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-01-27  John Luke  <john.luke@gmail.com>

	* Nemerle.glade:
	* Gui/CodeGenerationPanel.cs:
	* NemerleBindingCompilerServices.cs: fix some warnings,
	use ComboBox instead of OptionMenu

2005-01-24  Lluis Sanchez Gual  <lluis@novell.com>

	* NemerleBindingCompilerServices.cs: 
	* NemerleLanguageBinding.cs: Use the new progress monitor API.
	
2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* NemerleBinding.addin.xml:
	* Gui/CodeGenerationPanel.cs:
	* NemerleLanguageBinding.cs:
	* NemerleBindingCompilerServices.cs: Follow architecture changes.
	
	* Project/NemerleParameters.cs: Moved some common parameters to
	DotNetProjectConfiguration.
	
	* Gui/OutputPanel.cs:
	* Nemerle.glade: Removed dialog now implemented in Monodevelop.Base.
	
	* Project/NemerleProject.cs:
	* NemerleBindingExecutionServices.cs.in: Removed.
	* Makefile.am: Updated.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>
