@@ -1,3 +1,8 @@
+2005-12-13  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* NemerleLanguageBinding.cs: Implemented the new methods in
+	IDotNetLanguageBinding.
+
 2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* NemerleBinding.addin.xml: Fixed addin header information.
